--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -74,7 +74,7 @@
                     <img src="{% static 'client_logo/svl.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library <br> Web App"</u></i></h4><br><br>
+                    <h4 class="project-feedback-name"><u><i>"Knowledge Resource Center"</u></i></h4><br><br>
                     <h3 class="feedback-name">Dr Jagmeet Madan</h3>
                     <p class="feedback-post"><i>Principal - Sir Vithaldas Thackersey College of Home Science for Women</i>
                     </p>
@@ -98,7 +98,7 @@
                     <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"Content <br> Management"</u></i></h4><br><br>
+                    <h4 class="project-feedback-name"><u><i>"Website & Content Management"</u></i></h4><br><br>
                     <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
                     <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd </i>    
                     </p>
@@ -175,11 +175,11 @@
             <!-- Feedback Card 1 -->
             <div class="feedback-card">
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/tata1.png' %}" alt="Feedback 1">
+                    <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"Register Software"</u></i></h4><br>
-                    <h3 class="feedback-name">Director
+                    <h4 class="project-feedback-name"><u><i>"Salary Register Software"</u></i></h4><br>
+                    <h3 class="feedback-name">Mr. Hemant Nakashe
                     </h3>
                     <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd   </i> 
                     </p>
@@ -201,12 +201,12 @@
             <!-- Feedback Card 2 -->
             <div class="feedback-card">
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/svl.png' %}" alt="Feedback 2">
+                    <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Jane Smith</h3>
-                    <p class="feedback-post">Founder at Tech Innovators</p>
+                    <h4 class="project-feedback-name"><u><i>"Compliance Operation Software"</u></i></h4><br>
+                    <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
+                    <p class="feedback-post">Director - L. K. Nakashe Consultants Pvt. Ltd</p>
                     <p class="feedback-description">"Fantastic experience from start to finish. Their attention to detail is unmatched. Looking forward to working again."</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
@@ -220,12 +220,12 @@
             <!-- Feedback Card 3 -->
             <div class="feedback-card">
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/tata.png' %}" alt="Feedback 3">
+                    <img src="{% static 'client_logo/cgst.png' %}" alt="Feedback 3">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Alice Johnson</h3>
-                    <p class="feedback-post">CTO at Future Tech</p>
+                    <h4 class="project-feedback-name"><u><i>"Audit Utility Software"</u></i></h4><br>
+                    {% comment %} <h3 class="feedback-name">Alice Johnson</h3>
+                    <p class="feedback-post">CTO at Future Tech</p> {% endcomment %}
                     <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
@@ -236,108 +236,32 @@
                     </div>
                 </div>
             </div>
-            <!-- Feedback Card 4 -->
-            <div class="feedback-card">
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/accenture.png'  %}" alt="Feedback 4">
-                </div>
-                <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Mark Williams</h3>
-                    <p class="feedback-post">Product Manager at Innovations Ltd.</p>
-                    <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
-                    <div class="feedback-stars">
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">☆</span>
-                    </div>
+         <!-- Feedback Card 2 -->
+         <div class="feedback-card">
+            <div class="feedback-image">
+                <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
+            </div>
+            <div class="feedback-content">
+                <h4 class="project-feedback-name"><u><i>"LKN Audit Software"</u></i></h4><br>
+                <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
+                <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd </i>
+                </p>
+                <p class="feedback-description">"Impressed by their work, we decided to develop the LKN Audit Software, which once again delivered
+                    excellent results. The software operates seamlessly, reflecting the dedication and skill of Techno Win
+                    team."</p><br><br><br>
+                <div class="feedback-stars">
+                    <span class="star">★</span>
+                    <span class="star">★</span>
+                    <span class="star">★</span>
+                    <span class="star">☆</span>
+                    <span class="star">☆</span>
                 </div>
             </div>
         </div>
-        <br>
-        <br>
-        <div class="feedback-container">
-            <!-- Feedback Card 1 -->
-            <div class="feedback-card">
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/cgst.png' %}" alt="Feedback 1">
-                </div>
-                <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">John Doe</h3>
-                    <p class="feedback-post">CEO at Example Inc.</p>
-                    <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
-                    <div class="feedback-stars">
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                    </div>
-                </div>
-            </div>
-            <!-- Feedback Card 2 -->
-            <div class="feedback-card">
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
-                </div>
-                <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"LKN Audit Software"</u></i></h4><br>
-                    <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
-                    <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd </i>
-                    </p>
-                    <p class="feedback-description">"Impressed by their work, we decided to develop the LKN Audit Software, which once again delivered
-                        excellent results. The software operates seamlessly, reflecting the dedication and skill of Techno Win
-                        team."</p><br><br><br>
-                    <div class="feedback-stars">
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">☆</span>
-                        <span class="star">☆</span>
-                    </div>
-                </div>
-            </div>
-            <!-- Feedback Card 3 -->
-            <div class="feedback-card">
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/cidco.png' %}" alt="Feedback 3">
-                </div>
-                <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Alice Johnson</h3>
-                    <p class="feedback-post">CTO at Future Tech</p>
-                    <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
-                    <div class="feedback-stars">
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">☆</span>
-                    </div>
-                </div>
-            </div>
-            <!-- Feedback Card 4 -->
-            <div class="feedback-card">
-                <div class="feedback-image">
-                    <img src="{% static 'client_logo/navi_mumbai.png'  %}" alt="Feedback 4" >
-                </div>
-                <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Mark Williams</h3>
-                    <p class="feedback-post">Product Manager at Innovations Ltd.</p>
-                    <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
-                    <div class="feedback-stars">
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">★</span>
-                        <span class="star">☆</span>
-                    </div>
-                </div>
-            </div>
+        </div>
+        
+           
+            
         </div>
     </section>
 
