--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -457,127 +457,143 @@
         <div class="client-slider">
             <!-- Client Logo 1 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">
-                
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">   
             </div>
-            <!-- Client Logo 2 -->
-            <div class="client-logo-item">
-                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 2" class="client-logo">
-                
-            </div>
+        
             <!-- Client Logo 3 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/accenture.png' %}" alt="Client 3" class="client-logo">
+                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 3" class="client-logo">
             
             </div>
             <!-- Client Logo 4 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/amazon.png' %}" alt="Client 4" class="client-logo">
+                <img src="{% static 'client_logo/tata1.png' %}" alt="Client 4" class="client-logo">
                 
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/Maharashtra_Housing_and_Area_Development_Authority_(emblem).jpg' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/tata.png' %}" alt="Client 1" class="client-logo">
-                
+                <img src="{% static 'client_logo/Sports_Authority_of_India_logo.svg.png' %}" alt="Client 1" class="client-logo">
+            
             </div>
             <!-- Client Logo 2 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 2" class="client-logo">
-                
+                <img src="{% static 'client_logo/img1.png' %}" alt="Client 2" class="client-logo">
+            
             </div>
             <!-- Client Logo 3 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/accenture.png' %}" alt="Client 3" class="client-logo">
-                
+                <img src="{% static 'client_logo/cidcologo.jpg' %}" alt="Client 3" class="client-logo">
+            
             </div>
             <!-- Client Logo 4 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/amazon.png' %}" alt="Client 4" class="client-logo">
-                
+                <img src="{% static 'client_logo/government.jpg' %}" alt="Client 4" class="client-logo">
+            
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/microsoft.png' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/Hindustan_Petroleum_Logo.svg.png' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/tata.png' %}" alt="Client 1" class="client-logo">
+                <img src="{% static 'client_logo/logo.png' %}" alt="Client 1" class="client-logo">
             
             </div>
             <!-- Client Logo 2 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 2" class="client-logo">
+                <img src="{% static 'client_logo/ace.png' %}" alt="Client 2" class="client-logo">
                 
             </div>
             <!-- Client Logo 3 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/accenture.png' %}" alt="Client 3" class="client-logo">
+                <img src="{% static 'client_logo/Panvel_Municipal_Corporation (1).png' %}" alt="Client 3" class="client-logo">
             
             </div>
             <!-- Client Logo 4 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/amazon.png' %}" alt="Client 4" class="client-logo">
+                <img src="{% static 'client_logo/psn-logo (1).png' %}" alt="Client 4" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 5 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/cgst.png' %}" alt="Client 5" class="client-logo">
+                
+            </div>
+
+            <!-- Client Logo 1 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/navi_mumbai.png' %}" alt="Client 1" class="client-logo">   
+            </div>
+        
+            <!-- Client Logo 3 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 3" class="client-logo">
+            
+            </div>
+            <!-- Client Logo 4 -->
+            <div class="client-logo-item">
+                <img src="{% static 'client_logo/tata1.png' %}" alt="Client 4" class="client-logo">
                 
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/microsoft.png' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/Maharashtra_Housing_and_Area_Development_Authority_(emblem).jpg' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/tata.png' %}" alt="Client 1" class="client-logo">
+                <img src="{% static 'client_logo/Sports_Authority_of_India_logo.svg.png' %}" alt="Client 1" class="client-logo">
             
             </div>
             <!-- Client Logo 2 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 2" class="client-logo">
+                <img src="{% static 'client_logo/img1.png' %}" alt="Client 2" class="client-logo">
             
             </div>
             <!-- Client Logo 3 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/accenture.png' %}" alt="Client 3" class="client-logo">
+                <img src="{% static 'client_logo/cidcologo.jpg' %}" alt="Client 3" class="client-logo">
             
             </div>
             <!-- Client Logo 4 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/amazon.png' %}" alt="Client 4" class="client-logo">
+                <img src="{% static 'client_logo/government.jpg' %}" alt="Client 4" class="client-logo">
             
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/microsoft.png' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/Hindustan_Petroleum_Logo.svg.png' %}" alt="Client 5" class="client-logo">
             
             </div>
             <!-- Client Logo 1 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/tata.png' %}" alt="Client 1" class="client-logo">
+                <img src="{% static 'client_logo/logo.png' %}" alt="Client 1" class="client-logo">
             
             </div>
             <!-- Client Logo 2 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/lkn.png' %}" alt="Client 2" class="client-logo">
+                <img src="{% static 'client_logo/ace.png' %}" alt="Client 2" class="client-logo">
                 
             </div>
             <!-- Client Logo 3 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/accenture.png' %}" alt="Client 3" class="client-logo">
+                <img src="{% static 'client_logo/Panvel_Municipal_Corporation (1).png' %}" alt="Client 3" class="client-logo">
             
             </div>
             <!-- Client Logo 4 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/amazon.png' %}" alt="Client 4" class="client-logo">
+                <img src="{% static 'client_logo/psn-logo (1).png' %}" alt="Client 4" class="client-logo">
             
             </div>
             <!-- Client Logo 5 -->
             <div class="client-logo-item">
-                <img src="{% static 'client_logo/microsoft.png' %}" alt="Client 5" class="client-logo">
+                <img src="{% static 'client_logo/cgst.png' %}" alt="Client 5" class="client-logo">
                 
             </div>
         </div>
@@ -596,7 +612,7 @@
         
         .wrapper {
             background-color:rgb(8, 55, 116);
-            height: 100%;
+            height: 50%;
             width: 100%;
             display: flex;
             justify-content: center;
